@@ -18,8 +18,10 @@ lib/Log/Log4perl/Appender.pm
 lib/Log/Log4perl/Appender/DBI.pm
 lib/Log/Log4perl/Appender/File.pm
 lib/Log/Log4perl/Appender/Screen.pm
+lib/Log/Log4perl/Appender/Synchronized.pm
 lib/Log/Log4perl/Appender/TestArrayBuffer.pm
 lib/Log/Log4perl/Appender/TestBuffer.pm
+lib/Log/Log4perl/Appender/TestFileCreeper.pm
 lib/Log/Log4perl/Config.pm
 lib/Log/Log4perl/Config/DOMConfigurator.pm
 lib/Log/Log4perl/Config/PropertyConfigurator.pm
@@ -89,6 +91,7 @@ t/038XML-DOM1.t
 t/039XML-DOM2.t
 t/040Filter.t
 t/041SafeEval.t
+t/042SyncApp.t
 t/compare.pl
 t/deeper1.expected
 t/deeper6.expected
