@@ -1,5 +1,5 @@
 ######################################################################
-    Log::Log4perl 0.38
+    Log::Log4perl 0.39
 ######################################################################
 
 NAME
