@@ -13,7 +13,7 @@ use Log::Log4perl::Appender;
 
 use constant _INTERNAL_DEBUG => 1;
 
-our $VERSION = '0.38';
+our $VERSION = '0.39';
 
    # set this to '1' if you're using a wrapper
    # around Log::Log4perl
