@@ -141,8 +141,9 @@ sub log {
         }
     }
 
-    $self->{layout} || $self->layout();  #set to default if not already
-                                         #can this be moved?
+        # No more default layout (composite appenders)
+    #$self->{layout} || $self->layout();  #set to default if not already
+                                          #can this be moved?
 
     #doing the rendering in here 'cause this is 
     #where we keep the layout
@@ -174,7 +175,7 @@ sub log {
                                             $category,
                                             $level,
                                             3 + $Log::Log4perl::caller_depth,
-                                            );
+                                            ) if $self->layout();
 
     $self->{appender}->log(%$p, 
                             #these are used by our Appender::DBI
