@@ -1,0 +1,104 @@
+#!/usr/bin/perl
+##########################################################################
+# Synchronizing appender output with Log::Log4perl::Appender::Synchronized.
+# This test uses fork and a semaphore to get two appenders to get into
+# each other/s way.
+# Mike Schilli, 2003 (m@perlmeister.com)
+##########################################################################
+use warnings;
+use strict;
+
+use Test::More;
+
+BEGIN {
+    if(exists $ENV{"L4P_SYNC_TEST"}) {
+        plan tests => 1;
+    } else {
+        plan skip_all => "- only with L4P_SYNC_TEST";
+    }
+}
+
+use IPC::Shareable qw(:lock);
+use Log::Log4perl qw(get_logger);
+use Log::Log4perl::Appender::Synchronized;
+
+my $EG_DIR = "eg";
+$EG_DIR = "../eg" unless -d $EG_DIR;
+
+my $logfile = "$EG_DIR/fork.log";
+
+our $lock;
+our $locker;
+our $shared_name = "_l4_";
+
+#print "Nuking semaphore\n";
+Log::Log4perl::Appender::Synchronized::nuke_sem($shared_name);
+Log::Log4perl::Appender::Synchronized::nuke_sem("_l4_");
+Log::Log4perl::Appender::Synchronized::nuke_sem("_l4p");
+
+unlink $logfile;
+
+#print "tie\n";
+$locker = tie $lock, 'IPC::Shareable', $shared_name, 
+    { create  => 1, 
+      destroy => 1} or
+    die "Cannot create shareable $shared_name";
+
+my $conf = qq(
+log4perl.category.Bar.Twix          = WARN, Syncer
+
+log4perl.appender.Logfile           = Log::Log4perl::Appender::TestFileCreeper
+log4perl.appender.Logfile.autoflush = 1
+log4perl.appender.Logfile.filename  = $logfile
+log4perl.appender.Logfile.layout    = SimpleLayout
+
+log4perl.appender.Syncer           = Log::Log4perl::Appender::Synchronized
+log4perl.appender.Syncer.appender  = Logfile
+log4perl.appender.Syncer.key       = blah
+log4perl.appender.Syncer.layout    = SimpleLayout
+);
+
+$locker->shunlock();
+$locker->shlock();
+
+Log::Log4perl::init(\$conf);
+
+my $pid = fork();
+
+die "fork failed" unless defined $pid;
+
+my $logger = get_logger("Bar::Twix");
+if($pid) {
+   #parent
+   $locker->shlock();
+   #print "Waiting for child\n";
+   for(1..10) {
+       #print "Parent: Writing\n";
+       $logger->error("X" x 4097);
+   }
+} else { 
+   #child
+   $locker->shunlock();
+   for(1..10) {
+       #print "Child: Writing\n";
+       $logger->error("Y" x 4097);
+   }
+   exit 0;
+}
+
+my $clashes_found = 0;
+
+open FILE, "<$logfile" or die "Cannot open $logfile";
+while(<FILE>) {
+    if(/XY/ || /YX/) {
+        $clashes_found = 1;
+        last;
+    }
+}
+close FILE;
+
+unlink $logfile;
+
+$locker->clean_up;
+
+ok(! $clashes_found, "Checking for clashes in logfile");
