@@ -5,6 +5,10 @@ Revision history for Log::Log4perl
 0.39
     * (kg) fixed bug in interaction between Logger::Level and Level::is_valid
       so that now you can do $logger->level('INFO') instead of just $INFO.
+    * (ms) Added logic for 'composite appenders'. Appenders can now be
+      configured to relay messages to other appenders. Added 
+      Log::Log4perl::Appender::Synchronized, an appender guaranteeing 
+      atomic logging of messages via semaphores.
 
 0.38 (09/29/2003)
     * (kg) fixed bug where custom_levels beneath DEBUG didn't work
